# cock-monitor

./: .gitignore  DEPLOY.md  README.md  config.example.env  config.minimal.env  pyproject.toml  requirements-chart.txt  requirements-dev.txt
cock_monitor/: __init__.py  __main__.py  burst_capture_cli.py  config_check_cli.py  config_loader.py  config_schema.py  configure_cli.py  conntrack_check_cli.py  conntrack_decide_cli.py  conntrack_storage_cli.py  daily_chart_cli.py  defaults.py  env.py  install_cli.py  leak_investigation_cli.py  mtproxy_collect_cli.py  mtproxy_daily_cli.py  preflight.py  run_cli.py
config/: README.md
docs/: architecture-improvement-plan.md  burst-diagnosis-london.md  leak-investigation-rf3.md  refactoring-plan.md  refactoring-stage-reports.md  stage-0-inventory-and-contracts.md  stage-2-transaction-boundaries.md  stage-5-unified-boundaries.md  tasks-vpn-quality-investigation.md  v2-migration.md
examples/: crontab  mtproto-proxy-exec-args.example
install/: README.md  deploy-remote.sh  install-ubuntu-minimal.sh  install.sh  profiles.md  set-telegram-credentials.sh  uninstall.sh
lib/: conntrack-metrics.sh  incident-metrics.sh
migration/: README.md  restore_3xui_clients.py
mtproxy_module/: __init__.py  alerts.py  charts.py  collector.py  config.py  core.py  formatting.py  geo.py  reports.py  repository.py
scripts/: setup-dev.sh
systemd/: cock-monitor-core.service  cock-monitor-core.timer  cock-monitor-daily.service  cock-monitor-daily.timer  cock-monitor-entry.service  cock-monitor-entry.timer  cock-monitor-hop.service  cock-monitor.timer  (+29 more)
(+192 files in other folders)
