[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cock-monitor"
version = "0.1.0"
description = "Linux VPS monitoring: conntrack, Telegram alerts, optional SQLite metrics and charts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
chart = ["matplotlib>=3.7"]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cock_monitor*", "mtproxy_module*", "telegram_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Ruff: пакеты и tests/ (скрипты в bin/ с sys.path — вне области; см. CI).
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["cock_monitor", "mtproxy_module", "telegram_bot", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
